구글 연동 진행중

--- a/restaurant/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/restaurant/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -58,5 +58,85 @@
     "name": "kakao.auth.profileApiUrl",
     "type": "java.lang.String",
     "description": "A description for 'kakao.auth.profileApiUrl'"
+  },
+  {
+    "name": "naver.auth.requestUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.requestUrl'"
+  },
+  {
+    "name": "naver.auth.profileApiUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.profileApiUrl'"
+  },
+  {
+    "name": "naver.auth.grantType",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.grantType'"
+  },
+  {
+    "name": "naver.auth.clientId",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.clientId'"
+  },
+  {
+    "name": "naver.auth.clientSecret",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.clientSecret'"
+  },
+  {
+    "name": "naver.auth.sessionState",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.sessionState'"
+  },
+  {
+    "name": "naver.auth.code",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.code'"
+  },
+  {
+    "name": "naver.auth.redirectUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'naver.auth.redirectUrl'"
+  },
+  {
+    "name": "google.auth.redirectUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.redirectUrl'"
+  },
+  {
+    "name": "google.auth.profileApiUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.profileApiUrl'"
+  },
+  {
+    "name": "google.auth.clientId",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.clientId'"
+  },
+  {
+    "name": "google.auth.clientSecret",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.clientSecret'"
+  },
+  {
+    "name": "google.auth.sessionState",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.sessionState'"
+  },
+  {
+    "name": "google.auth.requestUrl",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.requestUrl'"
+  },
+  {
+    "name": "google.auth.scope",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.scope'"
+  },
+  {
+    "name": "google.auth.scope",
+    "type": "java.lang.String",
+    "description": "A description for 'google.auth.scope'"
   }
 ]}
