--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -38,6 +38,26 @@ kakao.auth.clientSecret=E71hnyAR2BWkILtyjBgLIPQ6eLHNOwTZ
 kakao.auth.sessionState=oauth_state
 kakao.auth.code=jTC8ek9Pgy-MMRIyhDytJP9HRXZ10bi5sW9AO-AhHXgYWXyWS_QrjoXcTLwfowaQ3T60XQoqJREAAAGH-9uZpw
 
+# NaverLogin (Local)
+# naver.auth.requestUrl=https://kauth.kakao.com/oauth/authorize
+naver.auth.redirectUrl=http://localhost:8095/snsLogin/naver
+naver.auth.profileApiUrl=https://openapi.naver.com/v1/nid/me
+# naver.auth.grantType=authorization_code
+naver.auth.clientId=rus0uzAFbWCZLBwClraP
+naver.auth.clientSecret=cC3HQYeGJY
+naver.auth.sessionState=naver_oauth_state
+# naver.auth.code=jTC8ek9Pgy-MMRIyhDytJP9HRXZ10bi5sW9AO-AhHXgYWXyWS_QrjoXcTLwfowaQ3T60XQoqJREAAAGH-9uZpw
+
+# GoogleLogin (Local)
+google.auth.requestUrl=http://oauth2.googleapis.com
+google.auth.redirectUrl=http://localhost:8095/snsLogin/google
+google.auth.profileApiUrl=https://accounts.google.com
+google.auth.clientId=771458434343-2v2h6vjamsso5ebbdtun8v3fe9lrnvtm.apps.googleusercontent.com
+google.auth.clientSecret=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
+google.auth.scope=profile email openid
+google.auth.sessionState=oauth_state
+
+
 # KakaoLogin (Live)
 #kakao.auth.requestUrl=https://kauth.kakao.com/oauth/token
 #kakao.auth.grantType=authorization_code
